--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,10 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.8.0"
+
+    // Unsplash
+    implementation 'com.github.unsplash:unsplash-photopicker-android:1.0.1'
+
+    // Ad Mob
+    implementation 'com.google.android.gms:play-services-ads:20.4.0'
 }
